--- a/release/application.yml
+++ b/release/application.yml
@@ -19,6 +19,7 @@ api:
     enable: true
     anime:
       accurate:
+        - "{【喵萌奶茶屋】.*\\[(.*)/([a-zA-Z].*)\\]\\[(\\d+)\\](.*)}:{[喵萌奶茶屋] $1 / $2 $3 $4}"
         - "{\\[悠哈璃羽字幕社\\] \\[(.*)_(.*)\\] \\[(\\d+)\\](.*)}:{[悠哈璃羽字幕社] $2 $3$4}"
         - "{【千夏字幕组】【(.*)_(.*)】\\[第(.*)话\\](.*)}:{[千夏字幕组] $2 $3 $4}"
         - "{\\[(.*)&LoliHouse\\] (.*) / ([\\u4E00-\\u9FA5]+) - (.*) }:{[$1&LoliHouse] $3 / $2 $4}"
