--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -14,11 +14,12 @@ api:
     enable: true
     anime:
       accurate:
+        - "{\\[(爱恋&漫猫字幕组|愛戀&漫貓字幕組)\\](.*)\\[([a-zA-Z].*)\\]\\[(\\d+)\\](.*)}:{[$1]$2 $3 $4 $5}"
         - "{【喵萌奶茶屋】.*\\[(.*)/([a-zA-Z].*)\\]\\[(\\d+)\\](.*)}:{[喵萌奶茶屋] $1 / $2 $3 $4}"
         - "{\\[悠哈璃羽字幕社\\] \\[(.*)_(.*)\\] \\[(\\d+)\\](.*)}:{[悠哈璃羽字幕社] $2 $3$4}"
-        - "{【千夏字幕组】【(.*)_(.*)】\\[第(.*)话\\](.*)}:{[千夏字幕组] $2 $3 $4}"
+        - "{【(千夏字幕组|千夏字幕組)】【(.*)_(.*)】\\[第(\\d+)(话|話)\\](.*)}:{[$1] $3 $4 $6}"
         - "{\\[(.*)&LoliHouse\\] (.*) / ([\\u4E00-\\u9FA5]+) - (.*) }:{[$1&LoliHouse] $3 / $2 $4}"
-        - "{【幻樱字幕组】【(.*)】【([^a-zA-Z]*)([a-zA-Z].*)】【(\\d+)】【([^【】]*)】【([^【】]*)】.*}:{[幻樱字幕组] $2 / $3 $4 [$5][$6]}"
+        - "{【(幻樱字幕组|幻櫻字幕組)】【(.*)】【([^a-zA-Z]*)([a-zA-Z].*)】【(\\d+)】【([^【】]*)】【([^【】]*)】.*}:{[$1] $3 / $4 $5 [$6][$7]}"
         - "{\\[猎户不鸽发布组\\]( [\\u4E00-\\u9FA5]+[。|？|！]* )(.*) \\[(\\d*)\\](.*)}:{[猎户不鸽发布组] $1/ $2 $3$4}"
         - "{\\[ANi\\] (.*) - (.*)\\s*[-|\\[]\\s*(\\d+)[ \\]](.+)}:{$1 $3 $4}"
         - "{\\[NC-Raws\\] ([\\u4E00-\\u9FA5 。？！]+) \\/ (.*) - (\\d*)(.*)}:{[NC-Raws] $1 / $2 $3$4 [简中\\]}"
