字幕组正则优化

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -18,12 +18,13 @@ api:
         - "{【喵萌奶茶屋】.*\\[(.*)/([a-zA-Z].*)\\]\\[(\\d+)\\](.*)}:{[喵萌奶茶屋] $1 / $2 $3 $4}"
         - "{\\[悠哈璃羽字幕社\\] \\[(.*)_(.*)\\] \\[(\\d+)\\](.*)}:{[悠哈璃羽字幕社] $2 $3$4}"
         - "{【(千夏字幕组|千夏字幕組)】【(.*)_(.*)】\\[第(\\d+)(话|話)\\](.*)}:{[$1] $3 $4 $6}"
-        - "{\\[(.*)&LoliHouse\\] (.*) / ([\\u4E00-\\u9FA5]+) - (.*) }:{[$1&LoliHouse] $3 / $2 $4}"
+        - "{\\[(.*)&LoliHouse\\] (.*) / (.*) - (.*) }:{[$1&LoliHouse] $3 / $2 $4}"
         - "{【(幻樱字幕组|幻櫻字幕組)】【(.*)】【([^a-zA-Z]*)([a-zA-Z].*)】【(\\d+)】【([^【】]*)】【([^【】]*)】.*}:{[$1] $3 / $4 $5 [$6][$7]}"
-        - "{\\[猎户不鸽发布组\\]( [\\u4E00-\\u9FA5]+[。|？|！]* )(.*) \\[(\\d+)\\](.*)}:{[猎户不鸽发布组] $1/ $2 $3$4}"
+        - "{\\[猎户不鸽发布组\\] ([^ ]*) (.*) \\[(\\d+)\\](.*)}:{[猎户不鸽发布组] $1 / $2 $3$4}"
         - "{\\[ANi\\] (.*) - (.*)\\s*[-|\\[]\\s*(\\d+)[ \\]](.+)}:{$1 $3 $4}"
-        - "{\\[NC-Raws\\] ([\\u4E00-\\u9FA5 。？！]+) \\/ (.*) - (\\d+)(.*)}:{[NC-Raws] $1 / $2 $3$4 [简中\\]}"
+        - "{\\[NC-Raws\\] (.*) \\/ (.*) - (\\d+)(.*)}:{[NC-Raws] $1 / $2 $3$4 [简中\\]}"
         - "{\\[猎户随缘发布组\\] ([^ ]*) ([a-zA-Z].*) \\[(\\d+)\\](.*)}:{[猎户随缘发布组] $1 / $2 $3$4}"
+        - "{\\[Lilith-Raws\\](.*)Shijou Saikyou no Daimaou}:{[Lilith-Raws]$1Shijou Saikyou no Daimaou, Murabito A ni Tensei suru}"
       common: 
         - "{Season}:{S}"
         - "{S0(\\d)}:{S$1}"
