--- a/release/application-prod.yml
+++ b/release/application-prod.yml
@@ -14,7 +14,7 @@ api:
         - "{\\[(.*)&LoliHouse\\] (.*) / (.*) - (.*) }:{[$1&LoliHouse] $3 / $2 $4}"
         - "{【(幻樱字幕组|幻櫻字幕組)】【(.*)】【([^a-zA-Z]*)([a-zA-Z].*)】【(\\d+)】【([^【】]*)】【([^【】]*)】.*}:{[$1] $3 / $4 $5 [$6][$7]}"
         - "{\\[猎户不鸽发布组\\] ([^ ]*) (.*) \\[(\\d+)\\](.*)}:{[猎户不鸽发布组] $1 / $2 $3$4}"
-        - "{\\[ANi\\] (.*) - (.*)\\s*[-|\\[]\\s*(\\d+)[ \\]](.+)}:{$1 $3 $4}"
+        - "{\\[ANi\\] (.*) - (.*)\\s*[-|\\[]\\s*(\\d+)[ \\]](.+)}:{$1 $3 $4[简中]}"
         - "{\\[NC-Raws\\] (.*) \\/ (.*) - (\\d+)(.*)}:{[NC-Raws] $1 / $2 $3$4 [简中\\]}"
         - "{\\[猎户随缘发布组\\] ([^ ]*) ([a-zA-Z].*) \\[(\\d+)\\](.*)}:{[猎户随缘发布组] $1 / $2 $3$4}"
         - "{\\[Lilith-Raws\\](.*)Shijou Saikyou no Daimaou}:{[Lilith-Raws]$1Shijou Saikyou no Daimaou, Murabito A ni Tensei suru}"
