新增字幕组[OPFans楓雪動漫]

--- a/release/application-prod.yml
+++ b/release/application-prod.yml
@@ -10,7 +10,7 @@ api:
         - "{Detective Conan (\\d+)}:{名侦探柯南 $1}"
       accurate:
         - "{\\[Skymoon-Raws\\]\\[(.*) ([^ ]*)\\]\\[(\\d+)](.*)}:{[Skymoon-Raws] $2 / $1 $3 $4}"
-        - "{\\[OPFans枫雪动漫\\]\\[(.*) ([^ ]*)]\\[第(\\d+)话\\](.*)}:{[OPFans枫雪动漫] $2 / $1 $3 $4}"
+        - "{\\[(OPFans枫雪动漫|OPFans楓雪動漫)\\]\\[(.*) ([^ ]*)]\\[第(\\d+)(话|話)\\](.*)}:{[$1] $3 / $2 $4 $6[简体]}"
         - "{\\[(爱恋&漫猫字幕组|愛戀&漫貓字幕組)\\](.*)\\[([a-zA-Z].*)\\]\\[(\\d+)\\](.*)}:{[$1]$2 $3 $4 $5}"
         - "{【喵萌奶茶屋】.*\\[(.*)/([a-zA-Z].*)\\]\\[(\\d+)\\](.*)}:{[喵萌奶茶屋] $1 / $2 $3 $4}"
         - "{\\[悠哈璃羽字幕社\\] \\[(.*)_(.*)\\] \\[(\\d+)\\](.*)}:{[悠哈璃羽字幕社] $2 $3$4}"
