--- a/src/main/resources/application-format.yml
+++ b/src/main/resources/application-format.yml
@@ -53,7 +53,7 @@ format:
         - match: "【(幻樱字幕组|幻櫻字幕組)】【(.*)】【([^a-zA-Z]*)([a-zA-Z].*)】【(\\d+)】【([^【】]*)】【([^【】]*)】.*"
           replace: "[$1] $3 / $4 $5 [$6][$7]"
           
-        - match: "\\[猎户不鸽发布组\\] ([^ ]*) (.*) \\[(\\d+)\\](.*)"
+        - match: "\\[猎户不鸽发布组\\] ([^a-rt-zA-RT-Z]+) ([a-zA-Z].*) \\[(\\d+)\\](.*)"
           replace: "[猎户不鸽发布组] $1 / $2 $3$4"
           
         - match: "\\[ANi\\] (.*) - (.*)\\s*[-|\\[]\\s*(\\d+)[ \\]](.+)"
