--- a/release/application-format.yml
+++ b/release/application-format.yml
@@ -27,6 +27,8 @@ format:
           replace: "S"
         - match: "S0(\\d+)"
           replace: "S$1"
+        - match: "\\[r=1-sinθ \\]"
+          replace: ""
           
       accurate:
         - match: "\\[Skymoon-Raws\\]\\[(.*) ([^ ]*)\\]\\[(\\d+)](.*)"
@@ -50,16 +52,16 @@ format:
         - match: "\\[(.*)&LoliHouse\\] ([a-zA-Z].*) / (.*) - (.*) "
           replace: "[$1&LoliHouse] $3 / $2 $4"
           
-        - match: "【(幻樱字幕组|幻櫻字幕組)】【(.*)】【([^a-zA-Z]*)([a-zA-Z].*)】【(\\d+)】【([^【】]*)】【([^【】]*)】.*"
+        - match: "【(幻樱字幕组|幻櫻字幕組)】【(.*)】【([^ ]*) ([a-zA-Z].*)】【(\\d+)v*.*】【([^【】]*)】【([^【】]*)】.*"
           replace: "[$1] $3 / $4 $5 [$6][$7]"
           
-        - match: "\\[猎户不鸽发布组\\] ([^ ]*) (.*) \\[(\\d+)\\](.*)"
+        - match: "\\[猎户不鸽发布组\\] ([^a-rt-zA-RT-Z]+) ([a-zA-Z].*) \\[(\\d+)\\](.*)"
           replace: "[猎户不鸽发布组] $1 / $2 $3$4"
           
         - match: "\\[ANi\\] (.*) - (.*)\\s*[-|\\[]\\s*(\\d+)[ \\]](.+)"
           replace: "$1 $3 $4[简中]"
           
-        - match: "\\[猎户随缘发布组\\] ([^ ]*) ([a-zA-Z].*) \\[(\\d+)\\](.*)"
+        - match: "\\[猎户随缘发布组\\] ([^ ]+ S\\d+) ([a-zA-Z].*) \\[(\\d+)\\](.*)"
           replace: "[猎户随缘发布组] $1 / $2 $3$4"
           
         - match: "\\[Lilith-Raws\\](.*)Shijou Saikyou no Daimaou"
