--- a/src/main/resources/application-format.yml
+++ b/src/main/resources/application-format.yml
@@ -52,7 +52,7 @@ format:
         - match: "\\[(.*)&LoliHouse\\] ([a-zA-Z].*) / (.*) - (.*) "
           replace: "[$1&LoliHouse] $3 / $2 $4"
           
-        - match: "【(幻樱字幕组|幻櫻字幕組)】【(.*)】【([^a-zA-Z]*)([a-zA-Z].*)】【(\\d+)】【([^【】]*)】【([^【】]*)】.*"
+        - match: "【(幻樱字幕组|幻櫻字幕組)】【(.*)】【([^ ]*) ([a-zA-Z].*)】【(\\d+)v*.*】【([^【】]*)】【([^【】]*)】.*"
           replace: "[$1] $3 / $4 $5 [$6][$7]"
           
         - match: "\\[猎户不鸽发布组\\] ([^a-rt-zA-RT-Z]+) ([a-zA-Z].*) \\[(\\d+)\\](.*)"
