--- a/release/docker/docker-compose.yml
+++ b/release/docker/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     container_name: jproxy
     environment:
       - TZ=Asia/Shanghai
+      - "JAVA_OPTS=-Xms256m -Xmx256m"
     volumes:
       - /docker/jproxy/config:/app/config
     network_mode: host
