--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -87,6 +87,11 @@
   {
     "name": "api.rule-market",
     "type": "java.lang.String",
-    "description": "A description for 'api.rule-market'"
+    "description": "规则市场接口地址"
+  },
+  {
+    "name": "cron.add-count",
+    "type": "java.lang.String",
+    "description": "添加下载次数定时 cron 表达式"
   }
 ]}
