--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,7 +1,7 @@
 logging:
    level:
       root: INFO
-      com.lckp.jproxy.aspect: DEBUG
+      com.lckp.jproxy: DEBUG
 
 rule:
    location: http://127.0.0.1:8117
