添加将redis的password和database暴露出来的配置

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -32,7 +32,8 @@ spring:
       redis:
          host: ${REDIS_HOST:127.0.0.1}
          port: ${REDIS_PORT:6379}
-         database: 0
+         password: ${REDIS_PASSWORD:}
+         database: ${REDIS_DATABASE:0}
          lettuce:
             pool:
                max-active: 8
