--- a/.github/workflows/docker-build-test.yml
+++ b/.github/workflows/docker-build-test.yml
@@ -26,7 +26,7 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
       - name: Build with Maven
-        run: mvn clean package -Dmaven.test.skip=true -Dmaven.javadoc.skip=true -B -P prod && java -Djarmode=layertools -jar target/jproxy.jar extract
+        run: mvn clean package -Dmaven.test.skip=true -Dmaven.javadoc.skip=true -B -V -P prod && java -Djarmode=layertools -jar target/jproxy.jar extract
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
