--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -21,6 +21,9 @@ time:
    radarr-rename-fall-back: 6
    downloader-login: 0 */30 * * * ?
 
+rename:
+   file: true
+
 spring:
    devtools:
       restart:
