--- a/.github/workflows/docker-build-test.yml
+++ b/.github/workflows/docker-build-test.yml
@@ -36,6 +36,11 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: ${{ env.DOCKERHUB_REPO }}
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
@@ -47,3 +52,4 @@ jobs:
           push: true
           tags: |
             ${{ env.DOCKERHUB_REPO }}:test
+          labels: ${{ steps.meta.outputs.labels }}
